    Idea:
        - Wrote an equals method.
        - Added a default constructor.

    Library:
        - Wrote the equals method.
        - Added a default constructor.

    Note:
        - Wrote the equals method.
        - Changed getChildren to getEntityChildren.
        - Added a default constructor.
    RefArg:
        - Updated to fit with the new Relation interface.

    Reference:
        - Wrote the equals method.
        - Added code for generating MLA and APA citations.
        - Added a default constructor.
        - Added the listOptions method.
    RefIdea:
        - Updated to fit with the new Relation interface.

    Theme:
        - Wrote the equals method.
        - Added a default constructor.
        - Added a field library that contains the library that the theme is
          found in

    Topic:
        - Wrote the equals method.
        - Removed the registerRelation and removeRelation methods.
        - Changed getChildren to getEntityChildren.
        - Changed addTheme to registerChild.
        - Changed deleteTheme to removeChild.

    Other Comments:
        Removed the add method from all entity classes, now they all inherit
        registerChild from Editable. This is also true of the remove methods,
        they now all implement removeChild.
        - Added a default constructor.
        - Removed each class's child list and moved it to Editable
        - Added a default constructor to all Entity Classes.
        - Removed all getEntityChildren methods was added to Editable superclass
        - Add to all entity classes a createChild class
        - Implemented listOptions and listAttributes in all entity classes
Management:
    RefMeisterExec:
        Rewrote main()
        Supports specifying directory via command-line

XML:
    MalformedXMLException:

    Saveable:

    XMLManager:

    XMLParser:

Other:
    - Every Instance of Editable changed to an instance of Entity
    - Remove Setters for Lists