@@ -11,7 +11,7 @@ import java.util.List;
 /**
  * The Argument class models an argument that would be associated with one or multiple References.
  * @author Brandon Townsend
- * @version 25, 3, 2018
+ * @version 17, 4, 2018
  */
 public class Argument extends Editable implements Relatable {
 
